HUDF-875: fix notification time cutoff in firefox, this actually fixes HUDF-1144 @jcheungfc

--- a/FJSHUD/app/styles/firefox.less
+++ b/FJSHUD/app/styles/firefox.less
@@ -359,6 +359,7 @@
     
     .NotificationDisplayName {
         padding-left: 5px;
+        padding-bottom: 25px;
         height: 20px !important;
         
         span{
@@ -374,12 +375,6 @@
         left: 5px;
         top: -5px;
         margin-bottom: -10px;
-    }
-	
-    .NotificationTime{
-        font-size: 11px;
-        right: 0;
-        bottom: 10px !important;
     }
     
     .NotificationMessage {
@@ -397,6 +392,13 @@
          /*width: 90%;*/
          max-width: 86%;
          padding-left: 10px;
+
+      }
+       .LeftBarNotificationMessageSection .NotificationDisplayName{
+        padding-bottom: 25px !important;
+       }
+      .NotificationMessages .NotificationTime{
+        bottom: 15px;
       }
     }
   }
