--- a/FJSHUD/app/styles/notification.less
+++ b/FJSHUD/app/styles/notification.less
@@ -7,7 +7,7 @@
 	-webkit-flex: 1;
 		
 	.NotificationDisplayName{
-		height: 2.5em;
+		height: 2em;
 		text-overflow: ellipsis;
 		white-space: nowrap;
 		overflow: hidden;
